--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^3.1.18
   firebase_storage: ^10.2.18
   firebase_core: ^1.18.0
+  image_picker: ^0.8.5+3
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
