--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.18.0
   image_picker: ^0.8.5+3
   provider: ^6.0.3
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
