--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.5+3
   provider: ^6.0.3
   fluttertoast: ^8.0.9
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_test:
